--- a/css/myprofile.less
+++ b/css/myprofile.less
@@ -395,6 +395,7 @@ img{
     border: solid 1px #cccccc;
     z-index: 101;
     top: 800/@rem;
+    display: none;
 }
 .changesex div{
     width: 100%;
@@ -429,4 +430,136 @@ img{
     display: inline-block;
      position: absolute;
      right:20/@rem;
+}
+
+.changenumber{
+    width: 930/@rem;
+    height: 570/@rem;
+    position: fixed;
+    left: 76/@rem;
+    height: 470/@rem;
+    z-index: 101;
+    display: none;
+}
+.changenumber .numreplace{
+    height: 142/@rem;
+    width: 100%;
+    background: #f5f5f5;
+    font-family: MicrosoftYaHei;
+    font-size: 40/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: 0px;
+    color: #2a2a2a;
+    text-align: center;
+    line-height: 140/@rem;
+}
+.changenumber .surealter{
+    width: 100%;
+    height: 128/@rem;
+    background-color: #e52323;
+    font-family: MicrosoftYaHei;
+    font-size: 46/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: 0px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 120/@rem;
+}
+.changenumber .phonenum{
+    width: 100%;
+    height:300/@rem;
+    background: white;
+    
+}
+.changenumber .phonenum .phonenumitem{
+    width: 928/@rem;
+    height: 80/@rem;
+    position: absolute;
+    top: 180/@rem;
+   left: 70/@rem;
+   }
+.changenumber .phonenum div:first-child{
+    width: 60/@rem;
+    height: 70/@rem;
+    line-height: 70/@rem;
+    white-space: nowrap;
+    display: inline;
+    font-family: MicrosoftYaHei;
+    font-size: 32/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: 0px;
+    color: #1f1f1f;
+}
+.changenumber .phonenum div:last-child{
+    width: 500/@rem;
+    height: 80/@rem;
+    
+   
+    display: inline;
+}
+.changenumber .phonenum div:last-child input{
+    padding: 0;
+    margin: 0;
+    width: 500/@rem;
+    height: 70/@rem;
+    font-family: MicrosoftYaHei;
+    font-size: 34/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    padding-left: 60/@rem;
+    line-height: 70/@rem;
+    letter-spacing: 0px;
+    color: #666666;
+    position: absolute;
+    top: 20/@rem;
+    border: none;
+}
+
+.changenickname{
+    width: 928/@rem;
+    height: 288/@rem;
+    background-color: #ffffff;
+    position: fixed;
+    top: 700/@rem;
+    left: 76/@rem;
+    z-index: 101;
+    border-radius:20/@rem 20/@rem 20/@rem 20/@rem;
+}
+.changenickname .nickname{
+    width: 100%;
+    margin-top: 10/@rem;
+    height: 120/@rem;
+    background: #F5F5F5;
+    text-align: center;
+    font-family: MicrosoftYaHei;
+    font-size: 40/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    line-height: 120/@rem;
+    letter-spacing: 0px;
+    color: #1f1f1f;
+    position: relative;
+}
+.changenickname .nickname div{
+     border: none;
+}
+.changenickname .nickname p{
+    font-family: MicrosoftYaHei;
+    font-size: 40/@rem;
+    font-weight: normal;
+    font-stretch: normal;
+    display: inline;
+    letter-spacing: 0px;
+    color: #e52323;
+    position: absolute;
+    right: 30/@rem;
+}
+.changenickname .nickname .input_input input{
+    height: 120/@rem;
+   
+    padding-left: 60/@rem;
+     border: none;
 }
