--- a/css/setting.css
+++ b/css/setting.css
@@ -3,79 +3,78 @@
 }
 .order {
   width: 100%;
-  height: 2.6666666666666665rem;
+  height: 2.66666667rem;
   position: relative;
   text-align: center;
-  line-height: 2.6666666666666665rem;
-  font-size: 0.8888888888888888rem;
+  line-height: 2.66666667rem;
+  font-size: 0.88888889rem;
   font-weight: normal;
   font-stretch: normal;
-  letter-spacing: 0.037037037037037035rem;
+  letter-spacing: 0.03703704rem;
   color: #2a2a2a;
   background-color: #e52323;
   color: #ffffff;
 }
 .order span img {
   font-family: MicrosoftYaHei;
-  font-size: 0.7407407407407407rem;
-  letter-spacing: 0.037037037037037035rem;
+  font-size: 0.74074074rem;
+  letter-spacing: 0.03703704rem;
   color: #ffffff;
   position: absolute;
   top: 30%;
-  left: 0.9814814814814815rem;
-  width: 0.5185185185185185rem;
-  height: 0.9074074074074074rem;
+  left: 0.98148148rem;
+  width: 0.51851852rem;
+  height: 0.90740741rem;
 }
 .center {
   width: 100%;
 }
 .center .security {
   width: 100%;
-  height: 2.7777777777777777rem;
+  height: 2.77777778rem;
   background-color: #ffffff;
   position: relative;
-  border-bottom: 0.018518518518518517rem solid #F5F5F5;
+  border-bottom: 0.01851852rem solid #f5f5f5;
 }
 .center .security .saft {
   width: 220px;
-  height: 0.7777777777777778rem;
+  height: 0.77777778rem;
   font-family: MicrosoftYaHei;
-  font-size: 0.7777777777777778rem;
+  font-size: 0.77777778rem;
   font-weight: normal;
   font-stretch: normal;
-  line-height: 2.7777777777777777rem;
-  letter-spacing: 0.037037037037037035rem;
+  line-height: 2.77777778rem;
+  letter-spacing: 0.03703704rem;
   color: #1a1a1a;
   display: inline;
   position: absolute;
-  left: 0.6111111111111112rem;
+  left: 0.61111111rem;
 }
 .center .security .change {
-  width: 6.185185185185185rem;
-  height: 0.7037037037037037rem;
+  width: 6.18518519rem;
+  height: 0.7037037rem;
   font-family: MicrosoftYaHei;
-  font-size: 0.7037037037037037rem;
+  font-size: 0.7037037rem;
   font-weight: normal;
   font-stretch: normal;
-  line-height: 2.7777777777777777rem;
+  line-height: 2.77777778rem;
   letter-spacing: 1px;
   color: #5a5a5a;
   display: inline;
   position: absolute;
-  right: 0.6666666666666666rem;
+  right: 0.66666667rem;
   white-space: nowrap;
 }
 .exitlogin {
   width: 100%;
-  height: 2.7777777777777777rem;
+  height: 2.77777778rem;
   background-color: #ffffff;
   position: relative;
-  font-size: 0.7777777777777778rem;
+  font-size: 0.77777778rem;
   font-weight: normal;
   font-stretch: normal;
-  line-height: 2.7777777777777777rem;
-  letter-spacing: 0.037037037037037035rem;
+  line-height: 2.77777778rem;
+  letter-spacing: 0.03703704rem;
   color: #1a1a1a;
-  padding-left: 0.5555555555555556rem;
+  padding-left: 0.55555556rem;
 }
-/*# sourceMappingURL=setting.css.map */
